--- a/src/css/1-gallery.css
+++ b/src/css/1-gallery.css
@@ -1,21 +1,21 @@
-img {
-    width: 360px;
-    height: 200px;
-    object-fit: cover;
-}
-  
 .gallery {
-    max-width: 1128px;
-    margin: 24px auto;
+    width: 1140px;
+    margin: 50px auto;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 24px;
 }
 
 .gallery-image {
+    display: block;
+    width: 360px;
+    height: 200px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.gallery-image:hover {
-    transform: scale(1.05);
+.gallery-image:hover,
+.gallery-image:focus {
+    transform: scale(1.04);
 }
